crates/zizmor/tests/integration/snapshots/integration__snapshot__undocumented_permissions.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"undocumented-permissions.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:7:3
  |
7 |   contents: write
  |   ^^^^^^^^^^^^^^^ contents: write is overly broad at the workflow level
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
 --> @@INPUT@@:6:1
  |
6 | / permissions:
7 | |   contents: write
8 | |   packages: read
  | |________________- help: consider adding comments to document the purpose of each permission
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
  --> @@INPUT@@:28:5
   |
28 | /     permissions:
29 | |       contents: write
30 | |       packages: write
31 | |       actions: write
   | |____________________- help: consider adding comments to document the purpose of each permission
   |
   = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
  --> @@INPUT@@:42:5
   |
42 | /     permissions:
43 | |       contents: write
44 | |       packages: write  
45 | |       actions: write
   | |____________________- help: consider adding comments to document the purpose of each permission
   |
   = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
  --> @@INPUT@@:55:5
   |
55 | /     permissions:
56 | |       contents: read
57 | |       metadata: read
   | |____________________- help: consider adding comments to document the purpose of each permission
   |
   = note: audit confidence → High

5 findings: 0 unknown, 0 informational, 4 low, 0 medium, 1 high
